--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,19 +2,24 @@ html {
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
     background-color: #221551; /* PANTONE 274 C */
+    color: white;
 }
 
 .page {
     min-height: 100vh;
     min-width: 100vh;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .flex {
-    /* border: 2px solid turquoise; */
     display: flex;
     flex-wrap: wrap;
+}
+
+.hide {
+    visibility: hidden;
+    opacity: 0;
 }
 
 .selection-container {
@@ -25,38 +30,73 @@ html {
 }
 
 .selection {
-    width: 16vh;
+    width: 8em;
     flex-direction: column;
     align-items: center;
     background: none;
     border: none;
-    /* border: 2px solid white; */
     outline: none;
     fill: white;
     transition: all 0.4s;
 }
 
 .selection-name {
-    color: white;
     font-weight: bold;
     font-size: 1.5em;
-    /* font-size: 24px; */
-    margin-top: 10%;
-    /* transform: translateY(75%); */
+    color: white;
+    margin-top: 12.5%;
 }
 
 .result-container {
-    min-width: 100vw;
     justify-content: space-evenly;
 }
 
 .result {
     flex-direction: column;
-    color: white;
     font-weight: bold;
+    font-size: 1.5em;
 }
 
 .score {
     font-size: 200%;
-    padding-top: 10%;
+    padding-top: 0.5rem;
+}
+
+.computer-selection-container {
+    justify-content: center;
+    font-size: 1.25em;
+}
+
+.computer-selection {
+    font-weight: bold;
+}
+
+.final-result-text {
+    font-weight: bold;
+    font-size: 5em;
+    align-self: center;
+}
+
+.play-again-button-container {
+    justify-content: center;
+    align-items: center;
+    /* border: 2px solid salmon; */
+}
+
+.play-again-button {
+    font-family: "Montserrat";
+    font-size: 1.5em;
+    padding: 0.75em;
+    background: none;
+    border: 2px solid deeppink;
+    border-radius: 4px;
+    outline: none;
+    color: white;
+    transition: all 0.4s;
+}
+
+.play-again-button:hover {
+    transform: scale(1.1, 1.1);
+    background-color: deeppink;
+    color: white;
 }
